--- a/Data/lorealparis/Scrape/lorealparisscraper.ipynb
+++ b/Data/lorealparis/Scrape/lorealparisscraper.ipynb
@@ -2052,7 +2052,7 @@
         "import time\n",
         "\n",
         "# Configuration (Insert own Username and SessionID)\n",
-        "USERNAME = 'yeg_gm'\n",
+        "USERNAME = 'your Instagram username'\n",
         "TARGET_PROFILE = 'your Instagram username'\n",
         "START_DATE = datetime(2024, 1, 1)\n",
         "END_DATE = datetime(2025, 12, 31)\n",
