--- a/Data/lorealparis/Scrape/lorealparisscraper.ipynb
+++ b/Data/lorealparis/Scrape/lorealparisscraper.ipynb
@@ -2053,7 +2053,7 @@
         "\n",
         "# Configuration (Insert own Username and SessionID)\n",
         "USERNAME = 'your Instagram username'\n",
-        "TARGET_PROFILE = 'your Instagram username'\n",
+        "TARGET_PROFILE = 'lorealparis'\n",
         "START_DATE = datetime(2024, 1, 1)\n",
         "END_DATE = datetime(2025, 12, 31)\n",
         "SESSIONID = 'your Instagram sessionID'\n",
