--- a/Data/sephora/Scrape/sephorascraper.ipynb
+++ b/Data/sephora/Scrape/sephorascraper.ipynb
@@ -77,11 +77,11 @@
         "import time\n",
         "\n",
         "# Configuration (Insert own Username and SessionID)\n",
-        "USERNAME = 'yeg_gm'\n",
+        "USERNAME = 'your Instagram username'\n",
         "TARGET_PROFILE = 'sephora'\n",
         "START_DATE = datetime(2024, 1, 1)\n",
         "END_DATE = datetime(2025, 12, 31)\n",
-        "SESSIONID = '320880400%3AnMeEZSuWFtwzjp%3A0%3AAYcn8jSjQwAsIL5gM4UtTqL4HhTYYn_qtUn_-gJPLA'\n",
+        "SESSIONID = 'your Instagram sessionID'\n",
         "DOWNLOAD_FOLDER = f\"{TARGET_PROFILE}_images_2024_2025\"\n",
         "\n",
         "# INIT\n",
