--- a/Data/ultabeauty/Scrape/ultabeauty_scraper.ipynb
+++ b/Data/ultabeauty/Scrape/ultabeauty_scraper.ipynb
@@ -1858,11 +1858,11 @@
         "import time\n",
         "\n",
         "# Configuration (Insert own Username and SessionID)\n",
-        "USERNAME = 'emi_luvsu'\n",
+        "USERNAME = 'your Instagram username'\n",
         "TARGET_PROFILE = 'ultabeauty'\n",
         "START_DATE = datetime(2024, 1, 1)\n",
         "END_DATE = datetime(2025, 12, 31)\n",
-        "SESSIONID = '3105556958%3As5Si1dkZRTucDn%3A4%3AAYd41vOIYKjitHkMbMG_2O6RAtd1C1IEw3ZerNEN4w'\n",
+        "SESSIONID = 'your Instagram sessionID'\n",
         "DOWNLOAD_FOLDER = f\"{TARGET_PROFILE}_images_2024_2025\"\n",
         "\n",
         "# INIT\n",
